# bounce-watcher

./: .gitignore  CHANGELOG.md  CUSTOMIZE.md  LICENSE  README.md  VERSION_STRATEGY.md  bounce_watcher.py  config.example.toml  pyproject.toml  requirements.txt
bounce_watcher/: __init__.py  config.py  configure.py  converter.py  destinations.py  drive_monitor.py  launchd.py  main.py  sources.py  utils.py  watcher.py
scripts/: convert_mix.sh
